<resources>
    <string name="app_id">OthersCalculators</string>

    <string name="app_name">Others Calculators</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">267933240296176</string>
    <string name="fb_login_protocol_scheme">fb267933240296176</string>
    <string name="action_logout">Logout</string>
    <string name="web_address">https://geniusnineapps.azurewebsites.net</string>


    <string name="banner_ad_unit_id">ca-app-pub-6819279779322408/5124140972</string>
    <string name="ads_app_id">ca-app-pub-6819279779322408~3647407778</string>


    <string name="loading">Loading</string>
    <string name="googleloginText">Sign In</string>
    <string name="facebook_data">FacebookUser</string>
    <string name="email_data">EmailUser</string>
    <string name="google_data">GoogleUser</string>


    <string name="currentCGPA">Current CGPA</string>
    <string name="totalCredit">Total Credit Hours</string>
    <string name="instruction">Please fill in the info below :</string>
    - <string-array name="grade_arrays">
    <item>Grade</item>
    <item>A+</item>
    <item>A-</item>
    <item>B+</item>
    <item>B</item>
    <item>C+</item>
    <item>C</item>
    <item>D+</item>
    <item>D</item>
    <item>F</item>
</string-array>
    - <string-array name="chour_arrays">
    <item>Credit Hour</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>14</item>
</string-array>
    <string name="totalcredit">Total Credit Hours</string>
    <string name="info1">"#Total Credit Hours = Accumulated Credit Hours that you have taken "</string>
    <string name="info2">#Current CGPA = Latest CGPA from the previous semesters</string>

    <string name="current">::Current Time::</string>


    <string name="unit1">Temperature</string>
    <string name="unit2">Weight</string>
    <string name="unit3">Length</string>
    <string name="unit4">Power</string>
    <string name="unit5">Energy</string>
    <string name="unit6">Velocity</string>
    <string name="unit7">Area</string>
    <string name="unit8">Volume</string>
    <string name="weightunitkg">Kg</string>
    <string name="weightunitgm">gm</string>
    <string name="weightunitlb">lb</string>
    <string name="weightunitounce">ounce</string>
    <string name="weightunitmg">mg</string>
    <string name="temperatureunitc">celcius</string>
    <string name="temperatureunitf">fahrenheit</string>
    <string name="lengthunitcm">cm</string>
    <string name="lengthunitm">m</string>
    <string name="lengthunitmm">mm</string>
    <string name="lengthunitkm">km</string>
    <string name="lengthunitfeet">ft</string>
    <string name="lengthunitmile">mile</string>
    <string name="lengthunitinch">inch</string>
    <string name="powerunithorseposer">horsepower</string>
    <string name="powerunitwatts">watts</string>
    <string name="powerunitkilowatts">kilowatts</string>
    <string name="energyunitcalories">calories</string>
    <string name="energyunitjoules">joules</string>
    <string name="energyunitkilocalories">kilocalories</string>
    <string name="velocityunitkmph">Km/hr</string>
    <string name="velocityunitmeterpers">m/s</string>
    <string name="velocityunitmilesperh">miles/hr</string>
    <string name="velocityunitfeetpers">feet/s</string>
    <string name="areaunitsqmm">square mm</string>
    <string name="areaunitsqm">square m</string>
    <string name="areaunitsqcm">square cm</string>
    <string name="areaunitsqkm">square km</string>
    <string name="areaunitsqmiles">square miles</string>
    <string name="areaunitsqyard">square yards</string>
    <string name="volumeunitmillilitres">millilitre</string>
    <string name="volumeunitlitres">litre</string>
    <string name="volumeunitcubicmm">cubic mm</string>
    <string name="volumeunitcubiccm">cubic cm</string>
    <string name="volumeunitcubicm">cubic m</string>
    <string name="volumeunitcubicfeet">cubic feet</string>


    <string name="String1">base</string>
    <string name="String2">height</string>


    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>



</resources>
